--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
   "minimum-stability": "dev",
   "require": {
     "php": ">=8.1",
+    "google/apiclient": "^2.12.6",
     "symfony/console": "6.2.*",
     "symfony/dotenv": "6.2.*",
     "symfony/finder": "6.2.*",
@@ -19,11 +20,13 @@
     "symfony/yaml": "6.2.*"
   },
   "require-dev": {
-    "friendsofphp/php-cs-fixer": "dev-master",
+    "friendsofphp/php-cs-fixer": "3.11.0",
     "phpstan/phpstan": "1.8.x-dev",
     "phpstan/phpstan-deprecation-rules": "1.1.x-dev",
     "phpstan/phpstan-phpunit": "1.1.x-dev",
-    "phpstan/phpstan-symfony": "1.2.x-dev"
+    "phpstan/phpstan-symfony": "1.2.x-dev",
+    "phpunit/phpunit": "^9",
+    "symfony/phpunit-bridge": "6.2.x-dev"
   },
   "config": {
     "optimize-autoloader": true,
@@ -45,7 +48,8 @@
   },
   "scripts": {
     "auto-scripts": {
-      "cache:clear": "symfony-cmd"
+      "cache:clear": "symfony-cmd",
+      "assets:install %PUBLIC_DIR%": "symfony-cmd"
     },
     "post-install-cmd": [
       "@auto-scripts"
