--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -1,13 +1,11 @@
 framework:
     secret: '%env(APP_SECRET)%'
+    http_method_override: false
     php_errors:
         log: true
-    http_client:
-        scoped_clients:
-            logstash.client:
-                base_uri: 'log_parser.logstash.address'
-                retry_failed:
-                    http_codes: [429]
-                    max_retries: 10
-                    delay: 1000
-                    multiplier: 2
+when@test:
+    framework:
+        test: true
+        session:
+            storage_factory_id: session.storage.factory.mock_file
+
