Readme and minor CS and logical fixes

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -16,3 +16,4 @@ parameters:
     inferPrivatePropertyTypeFromConstructor: true
     ignoreErrors:
         - '#^Cannot call method [a-z]+() on Psr\\Log\\LoggerInterface|null.$#'
+        - '#^Variable \$files might not be defined.$#'
