Re-enabled missing data types

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -13,30 +13,33 @@ parameters:
 
   spreadsheet.configuration.allowed_data_types:
     - xml
-    - csv
+    - json
+    - yaml
 
 services:
-    _defaults:
-        autowire: true
-        autoconfigure: true
+  _defaults:
+    autowire: true
+    autoconfigure: true
 
-    _instanceof:
-      Spreadsheet\Loader\DataLoaderInterface:
-        tags: ['spreadsheet.data_loader']
+  _instanceof:
+    Spreadsheet\Loader\DataLoaderInterface:
+      tags: ['spreadsheet.data_loader']
 
-      Spreadsheet\Parser\DataParserInterface:
-        tags: ['spreadsheet.data_parser']
+    Spreadsheet\Parser\DataParserInterface:
+      tags: ['spreadsheet.data_parser']
 
-      Spreadsheet\Publisher\SpreadsheetPublisherInterface:
-        tags: ['spreadsheet.publisher']
+    Spreadsheet\Publisher\SpreadsheetPublisherInterface:
+      tags: ['spreadsheet.publisher']
 
-    Spreadsheet\:
-      resource: '../src/'
-      exclude:
-        - '../src/DependencyInjection/'
-        - '../src/Exception/'
-        - '../src/Kernel.php'
+  Spreadsheet\:
+    resource: '../src/'
+    exclude:
+      - '../src/DependencyInjection/'
+      - '../src/Exception/'
+      - '../src/ValueObject/'
+      - '../src/Attribute/'
+      - '../src/Kernel.php'
 
-    Spreadsheet\ValueObject\Configuration\ApplicationConfiguration:
-      factory: '@Spreadsheet\Factory\Configuration\ApplicationConfigurationFactory'
-      class: Spreadsheet\ValueObject\Configuration\ApplicationConfiguration
+  Spreadsheet\ValueObject\Configuration\ApplicationConfiguration:
+    factory: '@Spreadsheet\Factory\Configuration\ApplicationConfigurationFactory'
+    class: Spreadsheet\ValueObject\Configuration\ApplicationConfiguration
